# website

./: .gitignore  Blog.hs  Code.hs  Conf.hs  Cv.hs  Data.hs  Hash.hs  Main.hs  Makefile  README.org  Shared.hs  Templates.hs  deploy.sh  run.sh  server.cabal  style.css
backup/: cv.html  index.php
static/: cv-en.html  style.css  test
