name:          server
version:       0.0
cabal-version: >= 1.2
build-type:    Simple

executable server
  main-is:       Main.hs
  build-depends: base, containers, text, bytestring, split, time, transformers, mtl, HTTP
               , blaze-html, happstack-lite, happstack-server, acid-state, safecopy, ixset
               , pwstore-fast, iso8601-time, friendly-time, pandoc

